Add Minio file service support + deploy and config updates
